--- a/src/components/ThemeSelector.astro
+++ b/src/components/ThemeSelector.astro
@@ -114,6 +114,8 @@ const themes = [
     }
 
     setTimeout(() => {
+        // If it's readonly how tf it changes?
+        // @ts-ignore
         document.body.style = "--color-duration: 300ms";
     });
 </script>
