--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,7 +1,7 @@
 ---
 import { getLangFromUrl, useTranslation } from "../../i18n/utils";
 import Layout from "../../layouts/Layout.astro";
-import { Icon } from 'astro-icon/components'
+import { Icon } from "astro-icon/components";
 
 export function getStaticPaths() {
     return [{ params: { lang: "en" } }, { params: { lang: "uk" } }];
@@ -20,7 +20,9 @@ const t = useTranslation(lang);
                 {t("title")}
             </h3>
 
-            <p class="text-lg text-[transparent] bg-clip-text bg-gradient-to-br from-text to-subtext1">
+            <p
+                class="text-lg text-[transparent] bg-clip-text bg-gradient-to-br from-text to-subtext1"
+            >
                 <Fragment set:html={t("description")} />
             </p>
         </section>
@@ -28,34 +30,53 @@ const t = useTranslation(lang);
         <section class="mt-12">
             <p><Fragment set:html={t("neko")} /></p>
             <a target="_blank">
-                <img class="object-cover min-w-full min-h-96 max-w-full sm:min-h-[32rem] max-h-96" id="neko" />
+                <img
+                    class="object-cover min-w-full min-h-96 max-w-full sm:min-h-[32rem] max-h-96"
+                    id="neko"
+                />
             </a>
         </section>
 
         <section class="mt-12">
-            <h4>{t('connect')}</h4>
-            
-            <div class="flex flex-col gap-2">            
+            <h4>{t("connect")}</h4>
+
+            <div class="flex flex-col gap-2">
                 <ul class="flex flex-col mt-2 gap-2">
                     <li class="inline-flex items-center">
                         <Icon name="github" />
                         <span class="ml-1 min-w-24">Github</span>
-                        <a href="https://github.com/simidzu2ay" class="py-1 px-2 bg-mauve/15 rounded-full ml-4">@simidzu2ay</a>
+                        <a
+                            href="https://github.com/simidzu2ay"
+                            class="py-1 px-2 bg-mauve/15 rounded-full ml-4"
+                            >@simidzu2ay</a
+                        >
                     </li>
                     <li class="inline-flex items-center">
                         <Icon name="discord" />
                         <span class="ml-1 min-w-24">Discord</span>
-                        <a href="https://discordapp.com/users/279266228151779329" class="py-1 px-2 bg-mauve/15 rounded-full ml-4">@simidzu2ay</a>
+                        <a
+                            href="https://discordapp.com/users/279266228151779329"
+                            class="py-1 px-2 bg-mauve/15 rounded-full ml-4"
+                            >@simidzu2ay</a
+                        >
                     </li>
                     <li class="inline-flex items-center">
                         <Icon name="telegram" />
                         <span class="ml-1 min-w-24">Telegram</span>
-                        <a href="https://t.me/simidzu2ay" class="py-1 px-2 bg-mauve/15 rounded-full ml-4">@simidzu2ay</a>
+                        <a
+                            href="https://t.me/simidzu2ay"
+                            class="py-1 px-2 bg-mauve/15 rounded-full ml-4"
+                            >@simidzu2ay</a
+                        >
                     </li>
                     <li class="inline-flex items-center">
                         <Icon name="steam" />
                         <span class="ml-1 min-w-24">Steam</span>
-                        <a href="https://steamcommunity.com/profiles/76561198276842908" class="py-1 px-2 bg-mauve/15 rounded-full ml-4">simidzu2ay</a>
+                        <a
+                            href="https://steamcommunity.com/profiles/76561198276842908"
+                            class="py-1 px-2 bg-mauve/15 rounded-full ml-4"
+                            >simidzu2ay</a
+                        >
                     </li>
                 </ul>
             </div>
@@ -64,14 +85,19 @@ const t = useTranslation(lang);
 </Layout>
 
 <script>
-    const url = 'https://nekos.life/api/v2/img/neko'
-    const nekoImg = document.getElementById('neko')
-    fetch(url).then(r => r.json()).then(json => {nekoImg.src = json.url; nekoImg.parentElement.href = json.url})
+    const url = "https://nekos.life/api/v2/img/neko";
+    const nekoImg = document.getElementById("neko")! as HTMLImageElement;
+    fetch(url)
+        .then((r) => r.json())
+        .then((json) => {
+            nekoImg.src = json.url;
+            (nekoImg.parentElement! as HTMLAnchorElement).href = json.url;
+        });
 </script>
 
 <style>
-[data-icon] {
-    font-size: 2rem;
-    @apply text-subtext1;
-}
+    [data-icon] {
+        font-size: 2rem;
+        @apply text-subtext1;
+    }
 </style>
