don't display image borders till api request is finished

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -96,6 +96,14 @@ const t = useTranslation(lang);
 </script>
 
 <style>
+    #neko{
+        visibility: hidden;
+    }
+
+    #neko[src] {
+        visibility: visible;
+    }
+
     [data-icon] {
         font-size: 2rem;
         @apply text-subtext1;
