oops! i haven't saved a file

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -31,7 +31,7 @@ const t = useTranslation(lang);
             <p><Fragment set:html={t("neko")} /></p>
             <a target="_blank">
                 <img
-                    class="object-cover min-w-full min-h-96 max-w-full sm:min-h-[32rem] max-h-96"
+                    class="object-cover object-top min-w-full min-h-96 max-w-full sm:min-h-[32rem] max-h-96"
                     id="neko"
                 />
             </a>
