--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -31,7 +31,7 @@ const t = useTranslation(lang);
             <p><Fragment set:html={t("neko")} /></p>
             <a target="_blank">
                 <img
-                    class="object-cover object-top min-w-full min-h-96 max-w-full sm:min-h-[32rem] max-h-96"
+                    class="object-cover min-w-full min-h-96 max-w-full sm:min-h-[32rem] max-h-96"
                     id="neko"
                 />
             </a>
@@ -93,11 +93,24 @@ const t = useTranslation(lang);
             nekoImg.src = json.url;
             (nekoImg.parentElement! as HTMLAnchorElement).href = json.url;
         });
+
+    
+    const body = document.body,
+    html = document.documentElement;
+
+    nekoImg.style = "--pos: 0%;"
+    window.onscroll = (e) => {
+        const current = window.scrollY;
+        
+        nekoImg.style = `--pos: ${current / body.scrollHeight * 100}%;`
+    }
+
 </script>
 
 <style>
     #neko {
         visibility: hidden;
+        object-position: 50% var(--pos);
     }
 
     #neko[src] {
