ignoring was dumb

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -101,7 +101,7 @@ const t = useTranslation(lang);
         const current = window.scrollY;
 
         // @ts-ignore
-        nekoImg.style = `--pos: ${(current / body.scrollHeight) * 100}%;`;
+        nekoImg.style = `--pos: ${(current / document.body.scrollHeight) * 100}%;`;
     };
 </script>
 
