--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,11 @@
+---
+import Meta from "../components/Meta.astro";
+---
+
 <!doctype html>
 <html>
     <head>
+        <Meta lang="en" />
         <meta http-equiv="refresh" content="0;url=/en/" />
     </head>
     <body> </body>
