--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,9 +2,11 @@
 import "../styles/app.css";
 import ThemeSelector from "../components/ThemeSelector.astro";
 import LanguageSelector from "../components/LangSelector.astro";
+import { getLangFromUrl } from "../i18n/utils";
+import Meta from "../components/Meta.astro";
 
 interface Props {
-    lang: string;
+    lang: ReturnType<typeof getLangFromUrl>;
 }
 
 const { lang } = Astro.props;
@@ -12,20 +14,7 @@ const { lang } = Astro.props;
 
 <html lang={lang}>
     <head>
-        <meta charset="UTF-8" />
-        <link
-            rel="icon"
-            type="image/x-icon"
-            href="https://github.com/simidzu2ay.png"
-        />
-        <meta name="viewport" content="width=device-width" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap"
-            rel="stylesheet"
-        />
-        <title>simidzu2ay</title>
+        <Meta lang={lang} />
     </head>
     <body>
         <header
@@ -38,7 +27,6 @@ const { lang } = Astro.props;
             <slot />
         </main>
         <footer class="min-h-16"></footer>
+        <script></script>
     </body>
 </html>
-
-<script></script>
