--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Meta from "../components/Meta.astro";
+import Meta from '../components/Meta.astro';
 ---
 
 <!doctype html>
 <html>
-    <head>
-        <Meta lang="en" />
-        <meta http-equiv="refresh" content="0;url=/en/" />
-    </head>
-    <body> </body>
+  <head>
+    <Meta lang="en" />
+    <meta http-equiv="refresh" content="0;url=/en/" />
+  </head>
+  <body> </body>
 </html>
