--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -1,28 +1,18 @@
 ---
-import { useTranslation, getLangFromUrl } from "../i18n/utils";
+import {useTranslation, getLangFromUrl} from '../i18n/utils';
 
 interface Props {
-    lang: ReturnType<typeof getLangFromUrl>;
+  lang: ReturnType<typeof getLangFromUrl>;
 }
 
-const { lang } = Astro.props;
+const {lang} = Astro.props;
 
 const t = useTranslation(lang);
 
-let localeLang;
-switch (lang) {
-    case "en":
-        localeLang = "en_US";
-        break;
-    case "uk":
-        localeLang = "uk_UA";
-        break;
-}
-
 const meta = {
-    title: "simidzu2ay",
-    description: t("meta.description"),
-    icon: "https://github.com/simidzu2ay.png",
+  title: 'henmalib',
+  description: t('meta.description'),
+  icon: 'https://github.com/henmalib.png'
 };
 ---
 
@@ -34,13 +24,13 @@ const meta = {
 <link rel="icon" type="image/x-icon" href={meta.icon} />
 <meta name="viewport" content="width=device-width" />
 
-<title>simidzu2ay</title>
+<title>{meta.title}</title>
 <meta name="description" content={meta.description} />
 
 <meta property="og:url" content={Astro.url} />
 <meta property="og:type" content="website" />
 <meta property="og:title" content={meta.title} />
-<meta property="og:locale" content={Astro.url} />
+<meta property="og:locale" content={lang} />
 <meta property="og:description" content={meta.description} />
 <meta property="og:image" content={meta.icon} />
 <meta property="og:image:width" content="460" />
@@ -49,7 +39,7 @@ const meta = {
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap"
-    rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Noto+Color+Emoji&display=swap"
+  rel="stylesheet"
 />
 <title>{meta.title}</title>
