--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -81,6 +81,14 @@ const t = useTranslation(lang);
               class="py-1 px-2 bg-mauve/15 rounded-full ml-4">simidzu2ay</a
             >
           </li>
+          <li class="inline-flex items-center">
+            <Icon name="monkeytype" />
+            <span class="ml-1 min-w-24">Monkeytype</span>
+            <a
+              href="https://monkeytype.com/profile/henmalib"
+              class="py-1 px-2 bg-mauve/15 rounded-full ml-4">henmalib</a
+            >
+          </li>
         </ul>
       </div>
     </section>
