--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -21,6 +21,8 @@ const meta = {
 <meta name="color-scheme" content="dark" />
 <meta name="theme-color" content="#c6a0f6" />
 
+<meta name="darkreader-lock" />
+
 <link rel="icon" type="image/x-icon" href={meta.icon} />
 <meta name="viewport" content="width=device-width" />
 
