--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,4 +1,4 @@
----
+  ---
 import {ui} from '../../i18n/ui';
 import {getLangFromUrl, useTranslation} from '../../i18n/utils';
 import Layout from '../../layouts/Layout.astro';
@@ -52,14 +52,14 @@ const t = useTranslation(lang);
           <Link
             iconName="github"
             text="Github"
-            href="https://discordapp.com/users/279266228151779329"
+            href="https://github.com/henmalib"
             shortlink="@henmalib"
           />
 
           <Link
             iconName="discord"
             text="Discord"
-            href="https://github.com/henmalib"
+            href="https://discordapp.com/users/279266228151779329"
             shortlink="@henmalib"
           />
 
@@ -80,7 +80,7 @@ const t = useTranslation(lang);
           <Link
             iconName="monkeytype"
             text="Monkeytype"
-            href="https://www.last.fm/user/Simidzu"
+            href="https://monkeytype.com/profile/henmalib"
             shortlink="henmalib"
           />
 
