Insane github gpg move ( added leetcode )

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -57,6 +57,14 @@ const t = useTranslation(lang);
           />
 
           <Link
+            iconName="leetcode"
+            text="leetcode"
+            href="https://leetcode.com/u/simidzu2ay"
+            shortlink="simidzu2ay"
+          />
+
+
+          <Link
             iconName="discord"
             text="Discord"
             href="https://discordapp.com/users/279266228151779329"
