Update leetcode link

--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -59,8 +59,8 @@ const t = useTranslation(lang);
           <Link
             iconName="leetcode"
             text="leetcode"
-            href="https://leetcode.com/u/simidzu2ay"
-            shortlink="simidzu2ay"
+            href="https://leetcode.com/u/henmalib"
+            shortlink="henmalib"
           />
 
 
