--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,13 +1,13 @@
-  ---
-import {ui} from '../../i18n/ui';
-import {getLangFromUrl, useTranslation} from '../../i18n/utils';
-import Layout from '../../layouts/Layout.astro';
-import Link from '../../components/Link.astro';
+---
+import { ui } from "../../i18n/ui";
+import { getLangFromUrl, useTranslation } from "../../i18n/utils";
+import Layout from "../../layouts/Layout.astro";
+import Link from "../../components/Link.astro";
 
 export function getStaticPaths() {
-  const langNames = Object.keys(ui) as (keyof typeof ui)[];
+	const langNames = Object.keys(ui) as (keyof typeof ui)[];
 
-  return langNames.map(lang => ({params: {lang}}));
+	return langNames.map((lang) => ({ params: { lang } }));
 }
 
 const lang = getLangFromUrl(Astro.url);
@@ -63,7 +63,6 @@ const t = useTranslation(lang);
             shortlink="henmalib"
           />
 
-
           <Link
             iconName="discord"
             text="Discord"
@@ -82,7 +81,7 @@ const t = useTranslation(lang);
             iconName="steam"
             text="Steam"
             href="https://steamcommunity.com/profiles/76561198276842908"
-            shortlink="simidzu2ay"
+            shortlink="henmalib"
           />
 
           <Link
