--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,19 @@
 ---
-import Meta from '../components/Meta.astro';
+import Meta from "../components/Meta.astro";
 ---
 
 <!doctype html>
 <html>
   <head>
     <Meta lang="en" />
-    <meta http-equiv="refresh" content="0;url=/en/" />
+    <script>
+      const userLang = navigator.language;
+      if (['en', 'uk'].includes(userLang)) {
+        window.location.href = `/${userLang}/`;
+      } else {
+        window.location.href = '/en/';
+      }
+    </script>
   </head>
   <body> </body>
 </html>
