--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -1,13 +1,14 @@
 ---
-import { ui } from "../../i18n/ui";
-import { getLangFromUrl, useTranslation } from "../../i18n/utils";
-import Layout from "../../layouts/Layout.astro";
-import Link from "../../components/Link.astro";
+import {ui} from '../../i18n/ui';
+import {getLangFromUrl, useTranslation} from '../../i18n/utils';
+import Layout from '../../layouts/Layout.astro';
+import Link from '../../components/Link.astro';
+import MusicList from '../../components/Music/List.svelte';
 
 export function getStaticPaths() {
-	const langNames = Object.keys(ui) as (keyof typeof ui)[];
+  const langNames = Object.keys(ui) as (keyof typeof ui)[];
 
-	return langNames.map((lang) => ({ params: { lang } }));
+  return langNames.map(lang => ({params: {lang}}));
 }
 
 const lang = getLangFromUrl(Astro.url);
@@ -106,6 +107,11 @@ const t = useTranslation(lang);
           />
         </ul>
       </div>
+    </section>
+
+    <section class="mt-4" id="music">
+      <h4 class="text-xl mb-2">My last scrobbles:</h4>
+      <MusicList client:load />
     </section>
   </div>
 </Layout>
