--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -46,7 +46,7 @@ a {
 }
 
 .noto-emoji {
-  font-family: "Noto Color Emoji", sans-serif;
+  font-family: 'Noto Color Emoji', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
