--- a/src/pages/crash.astro
+++ b/src/pages/crash.astro
@@ -7,6 +7,7 @@ import Meta from "../components/Meta.astro";
   <head>
     <Meta lang="en" />
     <script>
+        // @ts-ignore
         console.log(/(.*.*)*^/.test(.1+.2))
     </script>
   </head>
